@@ -1,5 +1,5 @@
 #ifndef lint
-static const char RCSid[] = "$Id: mkillum.c,v 2.16 2003/07/21 22:30:18 schorsch Exp $";
+static const char RCSid[] = "$Id: mkillum.c,v 2.17 2003/09/24 14:55:54 greg Exp $";
 #endif
 /*
  * Make illum sources for optimizing rendering process
@@ -24,7 +24,7 @@ static const char RCSid[] = "$Id: mkillum.c,v 2.16 2003/07/21 22:30:18 schorsch 
 
 				/* rtrace command and defaults */
 char  *rtargv[64] = { "rtrace", "-dj", ".25", "-dr", "3", "-dv-",
-		"-ab", "2", "-ad", "256", "-as", "128", "-aa", ".15", };
+		"-ab", "2", "-ad", "1024", "-as", "512", "-aa", ".1", };
 int  rtargc = 14;
 				/* overriding rtrace options */
 char  *myrtopts[] = { "-I-", "-i-", "-ld-", "-ov", "-h-",
